--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -55,7 +55,7 @@
      <x>0</x>
      <y>0</y>
      <width>979</width>
-     <height>30</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -550,7 +550,7 @@
     <bool>true</bool>
    </property>
    <property name="checked">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="text">
     <string>D&amp;ownlink</string>
