Introduces a RNTI table option to the GUI
Reasons:
  - per RNTI table added with average mcs, tbs and prb
  - per RNTI activity count
  - user adjustable averaging period
  - sorting functions for table

Solution:
  - RNTITable class with internal database to consume information from DCI
  	- realized with QMap's for fast look ups
	- collects data on every push from SubframeConsumer
	- averages data timer-based and updates table
  - sorting column-wise by double clicking any item or single clicking the columns header
	- after sorting by a column was selected, selecting this column for sorting again will cause the change of sorting order (ascending/descending)
	- latest selection of column to sort and sorting order is stored in settings
  - length of averaging period can be adjusted by slider in range of 100ms to 5s
	- granularity of timer is defined by macro (100ms granularity)

Context:
  2-gui-provide-a-list-view-of-active-rntis-and-corresponding-metrics

--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -82,6 +82,7 @@
      <addaction name="actionUplink"/>
      <addaction name="actionplot1"/>
      <addaction name="actionDownlink"/>
+     <addaction name="actionRNTI_Table"/>
     </widget>
     <widget class="QMenu" name="menuUtilities">
      <property name="title">
@@ -121,6 +122,7 @@
    <addaction name="actionUplink"/>
    <addaction name="actionDifference"/>
    <addaction name="actionplot1"/>
+   <addaction name="actionRNTI_Table"/>
    <addaction name="separator"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
@@ -612,6 +614,14 @@
    </property>
    <property name="text">
     <string>Do&amp;wnlink Plots</string>
+   </property>
+  </action>
+  <action name="actionRNTI_Table">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>RNTI Table</string>
    </property>
   </action>
   <zorder>dockWidget</zorder>
