Introduces minor improvements
Reasons:
  - Missing mutex include in RNTI table class
  - Tab widget label wrong
  - Waterfall scrolling

Solution:
  - Append mutex include
  - Rename label
  - Use shared (static) pause variable for all waterfall diagrams
    - All waterfalls now stop on mouse click
  - Allow scrolling in waterfalls when EyeThread has stopped

Context:
37 - minor improvements

--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -165,7 +165,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="rf_settings">
       <attribute name="title">
@@ -362,7 +362,7 @@
      </widget>
      <widget class="QWidget" name="color_settings">
       <attribute name="title">
-       <string>Color</string>
+       <string>Display</string>
       </attribute>
       <widget class="QLabel" name="color_label_downlink">
        <property name="geometry">
