--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -660,7 +660,7 @@
                     </sizepolicy>
                    </property>
                    <property name="text">
-                    <string>0</string>
+                    <string>60</string>
                    </property>
                    <property name="alignment">
                     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -669,6 +669,15 @@
                  </item>
                  <item row="1" column="0" colspan="3">
                   <widget class="QSlider" name="slider_wf_fps">
+                   <property name="minimum">
+                    <number>1</number>
+                   </property>
+                   <property name="maximum">
+                    <number>100</number>
+                   </property>
+                   <property name="value">
+                    <number>60</number>
+                   </property>
                    <property name="orientation">
                     <enum>Qt::Horizontal</enum>
                    </property>
@@ -896,7 +905,7 @@
                     </sizepolicy>
                    </property>
                    <property name="text">
-                    <string>0</string>
+                    <string>5</string>
                    </property>
                    <property name="alignment">
                     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -910,6 +919,15 @@
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
+                   </property>
+                   <property name="maximum">
+                    <number>50</number>
+                   </property>
+                   <property name="pageStep">
+                    <number>5</number>
+                   </property>
+                   <property name="value">
+                    <number>5</number>
                    </property>
                    <property name="orientation">
                     <enum>Qt::Horizontal</enum>
@@ -959,7 +977,7 @@
                     </sizepolicy>
                    </property>
                    <property name="text">
-                    <string>0</string>
+                    <string>4</string>
                    </property>
                    <property name="alignment">
                     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1150,6 +1168,9 @@
                   <verstretch>0</verstretch>
                  </sizepolicy>
                 </property>
+                <property name="value">
+                 <number>4</number>
+                </property>
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
                 </property>
@@ -1237,6 +1258,12 @@
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
+                   </property>
+                   <property name="maximum">
+                    <number>500</number>
+                   </property>
+                   <property name="value">
+                    <number>20</number>
                    </property>
                   </widget>
                  </item>
